	  "off" variable.  Set it to any value to turn it on and unset it to turn
	  it off.  This will optionally be used to only show less useful debug
	  information on an as-needed basis.
	* Add support for receiving handwritten (ink) messages on MSN.
	* Don't do IPv6 address lookups if the computer does not have an IPv6
	  address configured.
	* Add support for receiving audio clips on MSN.

	AIM and ICQ:
	* Preliminary support for a new authentication scheme called
	  "clientLogin."
	* Fixed a bug where your away message sometimes would not get set when
	  you first sign on.
	* Make sure links in your away messages show up as links to other people.
	* For ICQ, Never change the privacy setting specified by the user.

	Gadu-Gadu:
	* Accounts can specify a server to which to connect.
	  (Krzysztof "kreez" Tobola)
	* Correctly show tooltip status for contacts with status messages.
	  (Krzysztof "kkszysiu" Klinikowski)
	* Support for fetching buddy icons.  (Krzysztof "kkszysiu" Klinikowski)
	* Support connection progress steps in Gadu-Gadu (Krzysztof "kkszysiu"
	  Klinikowski)

	XMPP:
	* Voice & Video support with Jingle (XEP-0166, 0167, 0176, & 0177), voice
	  support with GTalk and voice and video support with the GMail web
	  client. (Mike "Maiku" Ruprecht)
	* Added a Service Discovery Browser plugin for Pidgin. (Andrei Mozzhuhin)
	* Support for in-band bytestreams for file transfers (XEP-0047). (Marcus
	  Lundblad)
	* Support for sending and receiving attentions (equivalent to "buzz"
	  and "nudge") using the command /buzz. (XEP-0224)
	* Support for connecting using BOSH. (Tobias Markmann)
	* A buddy's local time is displayed in the Get Info dialog if the remote
	  client supports it.
	* The set_chat_topic function can unset the chat topic.
	* The Ad-Hoc commands associated with our server are now always shown at
	  login.
	* Support showing and reporting idle times in the buddy list. (XEP-0256)
	* Support most recent version of User Avatar. (XEP-0084 v1.1)